--- a/style.css
+++ b/style.css
@@ -4,7 +4,18 @@
     padding:0;
     box-sizing:border-box ;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    
+}
+body{
+margin: 0;    
+padding: 0;
+background-color: black;
+    
+}
 
+.rapper{
+    width: 100%;
+    
 }
 header {
     position: fixed;
@@ -20,33 +31,34 @@ header {
 }
 .logo{
     font-size: 2em;
-    color: aqua;
+    color: rgb(173, 241, 0);
     cursor: pointer;
 }
-.navigation{
-    color: aliceblue;
-}
+
 .navigation a{
-    color-scheme:white;
-    font-size: 1em;
+    color: white;
+    font-size: 1.4em;
     margin-right: 19px;
     text-decoration: none;
     font-weight: 500;
     transition: .3s;
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    -ms-transition: .3s;
+    -o-transition: .3s;
 }
 .navigation a:hover{
-    color: aqua;
+    color: lightseagreen;
 
 }
 .logo span{
     color: rgb(7, 42, 42);
 }
 .home{
-    position: relative;
+    
     width: 100%;
     height:100vh;
     display:flex;
-    background-color: #fff;
     align-items:center ;    
     justify-content: space-between;
     padding:90px ;
@@ -57,64 +69,79 @@ header {
 }
 .content{
     max-width:500px;
-    color:skyblue;
+    color:white;
+position: relative;
+top: 130px;
 }
+
 .content h1{
-    font-size: 3em;
+    font-size: 4.5em;
+    color: yellow;
 }
-.content h3{
-    font-size: 2.4em;
+.content h2{
+    margin-top: 18px;
+    font-size: 3.5em;
 }
-.content h3 span{
+.content h2 span{
     color: aquamarine;
 }
-.content h5{
-    font-size: 1.9em;
+.content h3{
+    margin-top: 20px;
+    font-size: 3.3em;
 }
 .content p{
+    color: yellowgreen;
     text-align:justify;
+    font-size: 1.5em;
 }
 .imgsection img{
     
     border-radius:50%;
     width:550px;
 }
-.about {
-    width: 100%; 
-    margin: 40px 0; 
-    padding: 0 20px; 
+.content2 {
+    position: relative;
+    top: 120px;
+    left: 2cm;
+    
+   
 }
 
-.about .content {
+.about .content2 {
     max-width: 100%; 
-    text-align: justify; /
+    text-align: left; 
+    color: white;
+
+}
+
+.content2 h1 {
+    font-size: 4em;
 }
 
 .about p {
     width: 100%; 
     margin: 0 auto; 
     font-weight: 1000;
-    text-align: center;
+    /* text-align: center; */
 
 
 }
 
 
 .me{
-    text-align: center;
+    /* text-align: center; */
     
 }
 .f{
   
     white-space: nowrap;
-    text-align: center;
+    /* text-align: center; */
     font-size: 2.4em;
 }
 .education{
-    text-align: center;
+    /* text-align: center; */
 }
 .edubar{
-    background-color: #d8bfd5;
    
     
    
@@ -124,7 +151,6 @@ header {
 .fi{
     margin-bottom:1rem ;
     display:flex;
-    background-color:#0f018b;
     width:fit-content;
     margin-top: 3px;
     margin-left:-6px;
@@ -142,8 +168,43 @@ header {
     margin-left:-79rem;
    
 }
-    
 
+.wholecontent{
+    display: flex;
+    justify-content: space-between;
+}
 
     
-    
+.edubar {
+    background-color: #000 !important; /* Black background */
+    padding: 20px !important;
+    border: 1px solid #666 !important; /* Dark gray border */
+    border-radius: 10px !important;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1) !important;
+  }
+  
+  .eduflex {
+    display: flex !important;
+    flex-wrap: wrap !important;
+    justify-content: space-between !important;
+  }
+  
+  .education-list {
+    flex-basis: 30% !important;
+    margin: 20px !important;
+    padding: 20px !important;
+    border: 1px solid #666 !important; /* Dark gray border */
+    border-radius: 10px !important;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1) !important;
+    background-color: #333 !important; /* Dark gray background for list items */
+  }
+  
+  .education-list h3 {
+    color: #fff !important; /* White text for headings */
+    margin-top: 0 !important;
+  }
+  
+  .education-list p {
+    color: #ccc !important; /* Light gray text for paragraphs */
+    margin-bottom: 10px !important;
+  }
